Source/WebCore/platform/image-decoders/avif/AVIFImageReader.h
@@ -39,8 +39,8 @@ public:
     AVIFImageReader(RefPtr<AVIFImageDecoder>&&);
     ~AVIFImageReader();
 
-    bool parseHeader(const FragmentedSharedBuffer::DataSegment&, bool allDataReceived);
-    void decodeFrame(size_t index, ScalableImageDecoderFrame&, const FragmentedSharedBuffer::DataSegment&);
+    bool parseHeader(const SharedBuffer&, bool allDataReceived);
+    void decodeFrame(size_t index, ScalableImageDecoderFrame&, const SharedBuffer&);
     size_t imageCount() const;
     double repetitionCount() const;
 
