Source/WebCore/platform/image-decoders/jpeg2000/JPEG2000ImageDecoder.cpp
@@ -380,7 +380,7 @@ void JPEG2000ImageDecoder::decode(bool onlySize, bool allDataReceived)
     }
 
     struct Reader {
-        FragmentedSharedBuffer::DataSegment& data;
+        const SharedBuffer& data;
         size_t offset;
     } reader = { *m_data, 0 };
 
